crates/solidity/testing/snapshots/bindings_output/contracts/diamond/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[ input.sol:7:35 ]
   │
 7 │ ╭─▶     function foo() public virtual override {
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[ input.sol:15:35 ]
    │
 15 │ ╭─▶     function foo() public virtual override {
    ┆ ┆   
 17 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract A {
    │          ┬  
    │          ╰── name: 1
  2 │     function foo() public virtual {
    │              ─┬─  
    │               ╰─── name: 2
    │ 
  6 │ contract B is A {
    │          ┬  
    │          ╰── name: 3
  7 │     function foo() public virtual override {
    │              ─┬─  
    │               ╰─── name: 4
    │ 
 11 │ contract C is A {
    │          ┬  
    │          ╰── name: 5
    │ 
 14 │ contract D is B, C {
    │          ┬  
    │          ╰── name: 6
 15 │     function foo() public virtual override {
    │              ─┬─  
    │               ╰─── name: 7
    │
    ├─[ input.sol:1:1 ]
    │
  2 │     function foo() public virtual {
    │                           ───┬───  
    │                              ╰───── unresolved
    │ 
  6 │ contract B is A {
    │               ┬  
    │               ╰── ref: 1
  7 │     function foo() public virtual override {
    │                           ───┬───  
    │                              ╰───── unresolved
    │ 
 11 │ contract C is A {
    │               ┬  
    │               ╰── ref: 1
    │ 
 14 │ contract D is B, C {
    │               ┬  ┬  
    │               ╰───── ref: 3
    │                  │  
    │                  ╰── ref: 5
 15 │     function foo() public virtual override {
    │                           ───┬───  
    │                              ╰───── unresolved
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract A {
    ┆ ┆   
  4 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │   ╭─▶     function foo() public virtual {
  3 │   ├─▶     }
    │   │           
    │   ╰─────────── definiens: 2
    │ 
  5 │ ╭───▶ 
    ┆ ┆     
  9 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  7 │           function foo() public virtual override {
    │       ────────────────┬────────────────  
    │                       ╰────────────────── definiens: 4
    │ 
 10 │   ╭─▶ 
    ┆   ┆   
 12 │ │ ├─▶ }
    │ │ │       
    │ │ ╰─────── definiens: 5
 13 │ ╭───▶ 
    ┆ ┆     
 18 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 6
    │
    ├─[ input.sol:1:1 ]
    │
 15 │     function foo() public virtual override {
    │ ────────────────┬────────────────  
    │                 ╰────────────────── definiens: 7
────╯
